# gameplay3d-deps

./: ALL_BUILD.vcxproj  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  GamePlay-deps.sln  INSTALL.vcxproj  Makefile  ZERO_CHECK.vcxproj  cmake_install.cmake  gameplay-deps.vcxproj
base64-1.0.0/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  base64.vcxproj  base64.vcxproj.filters  cmake_install.cmake
cmake/: android.toolchain.cmake
freetype-2.4.5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
glew-1.10.0/: GLEW.vcxproj  GLEW.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  cmake_install.cmake
libiconv-1.15/: CMakeLists.txt  Makefile  cmake_install.cmake  config.h  config.status  libtool
libiconv-1.15/lib/: Makefile  config.h
libiconv-1.15/libcharset/: Makefile  config.h  config.status  libtool
libiconv-1.15/libcharset/lib/: Makefile
libiconv-1.15/man/: Makefile
libiconv-1.15/po/: Makefile  Makefile.in
libiconv-1.15/preload/: Makefile  config.status  libtool
libiconv-1.15/src/: Makefile
libiconv-1.15/srclib/: Makefile
libiconv-1.15/tests/: Makefile
libjson-7.6.1/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  cmake_install.cmake
lua-5.2.3/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  cmake_install.cmake
ogg-1.3.2/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  cmake_install.cmake  ogg.vcxproj  ogg.vcxproj.filters
openal-1.18.2/: CMakeLists.txt  Makefile  OpenALConfig.cmake  cmake_install.cmake  config.h  openal.pc
png-1.6.15/: ALL_BUILD.vcxproj  CTestTestfile.cmake  (+8 more)
(+62 files in other folders)
